feat: add styles to app

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
+  width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 24px;
+  flex-grow: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  padding: 24px;
+  background-color: rgb(27, 24, 24);
+  color: whitesmoke;
+}
+
+footer {
+  padding: 24px;
+  background-color: whitesmoke;
+  border-top: 1px solid rgb(27, 24, 24);
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin: 0 auto;
+}
+
+input,
+button {
+  padding: 16px;
+  border-radius: 8px;
+  border: 1px solid rgba(27, 24, 24, 0.5);
+  font-family: inherit;
+  font-size: 24px;
+}
+
+button {
+  background-color: rgb(27, 24, 24);
+  color: whitesmoke;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: 2px solid rgb(27, 24, 24);
+  outline-offset: 2px;
 }
